--- a/server/d1/vine_comment/templates/comments_list.html
+++ b/server/d1/vine_comment/templates/comments_list.html
@@ -94,7 +94,7 @@
            {% include 'reply.html' %}
            </div>
            <li class="list-group-item">
-           <div class="input-group">
+					 <div name="reply{{message.id}}" class="input-group">
              <textarea rows="5" class="form-control" id="reply{{message.id}}" name="reply" placeholder="可输入5-140个字"></textarea>
              <span class="input-group-btn">
                <button class="btn btn-default submitComment" data-loading-text="回复中" onclick="reply('{{message.id}}')" type="button">
