--- a/server/d1/vine_comment/templates/reply.html
+++ b/server/d1/vine_comment/templates/reply.html
@@ -8,7 +8,7 @@
    {% for reply in replies %}
 	 <li class="list-group-item">
      <span style="float:right">
-       <a href="#" onclick="replyAtReply('{{reply.comment.id}}','{{reply.user}}');return false;">
+       <a href="#reply{{reply.comment.id}}" onclick="replyAtReply('{{reply.comment.id}}','{{reply.user}}');">
         <i class="fa fa-reply"></i>
       </a>
      </span>
