Change page description words

--- a/server/d1/vine_comment/templates/comments_debate.html
+++ b/server/d1/vine_comment/templates/comments_debate.html
@@ -9,7 +9,7 @@
 {% block content %}
 <ol class="breadcrumb">
   <li><a href="/">藤蔓评论</a></li>
-  <li class="active">{{days}}天最热</li>
+  <li class="active">{{days}}天最具争议</li>
 </ol>
 
 {% include 'comments_list.html' %}
