Provide one click UX to most debate comments

--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -58,15 +58,7 @@
             <li><a href="/comments/up/30" id="comments_hot_30">30天最多up</a></li>
           </ul>
         </li>
-        <li class="dropdown subject-item">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <div class="subject-title">最具争议 <b class="caret"></b></div></a>
-          <ul class="dropdown-menu">
-            <li><a href="/comments/debate/1" id="comments_debate_1">今日最具争议</a></li>
-            <li><a href="/comments/debate/7" id="comments_debate_7">7天最具争议</a></li>
-            <li><a href="/comments/debate/30" id="comments_debate_30">30天最具争议</a></li>
-          </ul>
-        </li>
+        <li><a href="/comments/debate/7" id="comments_debate_default">最具争议</a></li>
       </ul>
       <div class="col-sm-3 col-md-3">
       <form class="navbar-form navbar-left" role="search" method="get" action="/faceted_search">
