--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -40,24 +40,8 @@
         <!-- <li><a href="#home" data-toggle="tab" onclick="Home(this)">展示</a></li> -->
         <li><a href="/comments/best" id="comments_best">最优</a></li>
         <li><a href="/comments/newest" id="comments_newest">最新</a></li>
-        <li class="dropdown subject-item">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <div class="subject-title">最多评论 <b class="caret"></b></div></a>
-          <ul class="dropdown-menu">
-            <li><a href="/comments/hot/1" id="comments_hot_1">今日最多评论</a></li>
-            <li><a href="/comments/hot/7" id="comments_hot_7">7天最多评论</a></li>
-            <li><a href="/comments/hot/30" id="comments_hot_30">30天最多评论</a></li>
-          </ul>
-        </li>
-        <li class="dropdown subject-item">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <div class="subject-title">最多up <b class="caret"></b></div></a>
-          <ul class="dropdown-menu">
-            <li><a href="/comments/up/1" id="comments_hot_1">今日最多up</a></li>
-            <li><a href="/comments/up/7" id="comments_hot_7">7天最多up</a></li>
-            <li><a href="/comments/up/30" id="comments_hot_30">30天最多up</a></li>
-          </ul>
-        </li>
+        <li><a href="/comments/hot/7" id="comments_hot_default">最多评论</a></li>
+        <li><a href="/comments/up/7" id="comments_up_default">最多up</a></li>
         <li><a href="/comments/debate/7" id="comments_debate_default">最具争议</a></li>
       </ul>
       <div class="col-sm-3 col-md-3">
