--- a/server/d1/vine_comment/templates/comments_hot.html
+++ b/server/d1/vine_comment/templates/comments_hot.html
@@ -9,7 +9,28 @@
 {% block content %}
 <ol class="breadcrumb">
   <li><a href="/">藤蔓评论</a></li>
-  <li class="active">{{days}}天最多评论</li>
+  <li class="active">最多评论</li>
+  {% if days == '1' %}
+  <li class="active">
+    <a href="/comments/hot/1" id="comments_hot_1"><b>今日</b></a> | 
+    <a href="/comments/hot/7" id="comments_hot_7">7天</a> | 
+    <a href="/comments/hot/30" id="comments_hot_30">30天</a>
+  </li>
+  {% else %}
+  {% if days == '7' %}
+  <li class="active">
+    <a href="/comments/hot/1" id="comments_hot_1">今日</a> | 
+    <a href="/comments/hot/7" id="comments_hot_7"><b>7天</b></a> | 
+    <a href="/comments/hot/30" id="comments_hot_30">30天</a>
+  </li>
+  {% else %}
+  <li class="active">
+    <a href="/comments/hot/1" id="comments_hot_1">今日</a> | 
+    <a href="/comments/hot/7" id="comments_hot_7">7天</a> | 
+    <a href="/comments/hot/30" id="comments_hot_30"><b>30天</b></a>
+  </li>
+  {% endif %}
+  {% endif %}
 </ol>
 
 {% include 'comments_list.html' %}
