--- a/server/d1/d1/templates/registration/registration_complete.html
+++ b/server/d1/d1/templates/registration/registration_complete.html
@@ -15,5 +15,5 @@ $(document).ready(function(){
 </script>
 <h1>Check your email</h1>
 <p>An activation link has been sent to the email address you supplied, along with instructions for activating your account.</p>
-<a href="#">Back to comments<a>
+<a href="/">Back to vine comments<a>
 {% endblock %}
