template: update comment to add a ref doc

--- a/server/d1/vine_comment/templates/search/advanced_search.html
+++ b/server/d1/vine_comment/templates/search/advanced_search.html
@@ -3,6 +3,10 @@
 
 {% block content %}
 
+{% comment %}
+ref: https://github.com/toastdriven/django-haystack/blob/831d738de2253f2b28cc95b399bf578cf7282228/docs/faceting.rst
+{% endcomment %}
+
 <div class="block">
 <form class="form-inline" role="search" method="get" action=".">
   <div class="form-group">
