--- a/server/d1/vine_comment/templates/comments_list.html
+++ b/server/d1/vine_comment/templates/comments_list.html
@@ -50,10 +50,6 @@
             {% endif %}
             +<span>{{ message.up_users|length }}</span>
           </a>
-          <a href="#" id="reply_comment_{{message.id}}" onclick="expandReply('{{message.id}}');return false;">
-            <i class="fa fa-comments-o"></i>
-            <span>{{ message.replies|length }}</span>
-          </a>
           <a href="#" id="down_comment_{{message.id}}" onclick="down('{{message.id}}');return false;">
             {% if user.id in message.down_users %}
             <i class="fa fa-thumbs-down fa-flip-horizontal"></i>
@@ -62,8 +58,13 @@
             {% endif %}
             -<span>{{ message.down_users|length }}</span>
           </a>
+          {# TODO: 添加tips，说明icon功能，不然留言icon字太小。 #}
+          <a class="reply-icon" href="#" id="reply_comment_{{message.id}}" onclick="expandReply('{{message.id}}');return false;">
+            <i class="fa fa-comments-o"></i>
+            <span>{{ message.replies|length }}</span>
+          </a>
          </span>
-         <span style="font-size:200%" id="comment_str_{{message.id}}">{{message.comment_str}}</span>
+         <span style="font-size:120%" id="comment_str_{{message.id}}">{{message.comment_str}}</span>
          <span>
            (<a href="{{message.comment_board.url}}">{{message.comment_board.url}}</a>)
            <a href="#" onclick="expandDetail('{{message.id}}');return false;"><i class="fa fa-info-circle"></i></a>
