--- a/server/d1/vine_comment/templates/comments_list.html
+++ b/server/d1/vine_comment/templates/comments_list.html
@@ -79,7 +79,7 @@
                {% endif %}
              {% if message.author %}{{ message.author.user }}{% else %}{{ message.author_ip }}{% endif %}
            </a>
-           <span id='comment_time'>提交于 {{ message.time_added|naturaltime }}</span>
+           <span class='comment-time'>提交于 {{ message.time_added|naturaltime }}</span>
          </span>
          <span id="comment_tags_{{message.id}}">
            {%for tag in message.tags%}
