--- a/server/d1/static/test/comment_styles.css
+++ b/server/d1/static/test/comment_styles.css
@@ -33,10 +33,11 @@ text-decoration:none;
 color:#000000;
 }
 
+/* 
 #boardLeft:hover{
 background: #24BE37;
 }
-/* #boardLeft:hover, #boardLeft:focus, #boardLeft a:focus, #boardLeft a:hover {
+#boardLeft:hover, #boardLeft:focus, #boardLeft a:focus, #boardLeft a:hover {
 	background:#000011;
 	border-bottom-color:#777;
     color:#ffffff;
