--- a/server/d1/vine_comment/templates/comments/comment_iframe_view.html
+++ b/server/d1/vine_comment/templates/comments/comment_iframe_view.html
@@ -12,7 +12,7 @@
   <div id="loadImg"><div><img src="//{{ request.META.HTTP_HOST }}{% static 'icons/loading1.gif' %}" /></div></div>
   <iframe id="__vine_comment" src="//{{ request.META.HTTP_HOST }}/comment/{{ url_b64 }}" width="100%" height="100%" frameborder="0" onload="document.getElementById('loadImg').style.display='none';"></iframe>
   <div id="boardLeft" >
-    <a href="#">
+    <a href="javascript:void(0);">
       <div id="boardDesc"><p>神 吐 槽 —</p></div>
       <div id="boardButton"><strong><</strong></div>
     </a>
