--- a/server/d1/vine_comment/templates/comments_debate.html
+++ b/server/d1/vine_comment/templates/comments_debate.html
@@ -9,7 +9,7 @@
 {% block content %}
 <ol class="breadcrumb">
   <li><a href="/">藤蔓评论</a></li>
-  <li class="active">最具争议</li>
+  <li class="active">热议</li>
   {% if days == '1' %}
   <li class="active">
     <a href="/comments/debate/1" id="comments_debate_1"><b>今日</b></a> | 
