--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -40,10 +40,10 @@
       <ul class="nav navbar-nav">
         <!-- <li><a href="#home" data-toggle="tab" onclick="Home(this)">展示</a></li> -->
         <li><a href="/comments/best" id="comments_best">最优</a></li>
+        <li><a href="/comments/up/7" id="comments_up_default">精华</a></li>
+        <li><a href="/comments/hot/7" id="comments_hot_default">热议</a></li>
         <li><a href="/comments/newest" id="comments_newest">最新</a></li>
-        <li><a href="/comments/hot/7" id="comments_hot_default">最多评论</a></li>
-        <li><a href="/comments/up/7" id="comments_up_default">最多up</a></li>
-        <li><a href="/comments/debate/7" id="comments_debate_default">热议</a></li>
+        {% comment %} <li><a href="/comments/debate/7" id="comments_debate_default">热议</a></li> {% endcomment %}
       </ul>
       <div class="col-sm-3 col-md-3">
       <form class="navbar-form navbar-left" role="search" method="get" action="/faceted_search">
