--- a/server/d1/static/test/comment_styles.css
+++ b/server/d1/static/test/comment_styles.css
@@ -13,7 +13,9 @@ padding: 10px;}
 background: #ffffff; border-top-left-radius:0.5em;border-bottom-left-radius:0.5em; border:3px solid #d3d3d3; border-right:0px; top:0%;
 box-shadow: rgba(0, 0, 0, 0.0980392) -10px 0px 10px 0px;-webkit-box-shadow: rgba(0, 0, 0, 0.0980392) -10px 0px 10px 0px;}
 
-#comment_time {color: #C0C0C0;}
+.comment-time {
+color: #C0C0C0;
+}
 
 #boardLeft{
 position:absolute;top:40%;left:-40px;width:35px;border:2px solid #aaaaaa;
