template: tuning css

--- a/server/d1/vine_comment/templates/comments/comment_detail_view.html
+++ b/server/d1/vine_comment/templates/comments/comment_detail_view.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 
 <div class="block">
-<div class="page-header">
+<div class="page-header" style="margin:-10px 0 20px;">
 <h3>Comment Detail <small>{{comment.comment_board}}</small> </h3> 
 {% if user == comment.user %}
 <a href="/comment/delete/{{comment.id}}">Delete</a>
