--- a/server/d1/vine_comment/templates/comments_list.html
+++ b/server/d1/vine_comment/templates/comments_list.html
@@ -86,7 +86,24 @@
            <a href="/faceted_search/?q={{tag}}"><span class="label label-default">{{tag}}</span></a>
            {%endfor%}
          </span>
-         <br>
+         <br/>
+         <div id="detailDiv{{message.id}}" style="display:none;margin-top:10px">
+         </div>
+
+         <div id="replyDiv{{message.id}}" style="display:none;margin-top:10px">
+           <div id="repliesof{{message.id}}">
+           {% include 'reply.html' %}
+           </div>
+           <div name="reply{{message.id}}" class="input-group">
+             <textarea rows="5" class="form-control" id="reply{{message.id}}" name="reply" placeholder="可输入5-140个字"></textarea>
+             <span class="input-group-btn">
+               <button class="btn btn-default submitComment" data-loading-text="回复中" onclick="reply('{{message.id}}')" type="button">
+                回复
+               </button>
+             </span>
+           </div><!-- /input-group -->
+         </div>
+         {% comment %}
          <ul class="list-group" id="detailDiv{{message.id}}" style="display:none;margin-top:10px">
            loading ...
          </ul>
@@ -105,6 +122,7 @@
            </div><!-- /input-group -->
            </li>
          </ul>
+         {% endcomment %}
       </li>
     {% endfor %}
     </ul>
