--- a/server/d1/vine_comment/templates/auth/auth_modal.html
+++ b/server/d1/vine_comment/templates/auth/auth_modal.html
@@ -56,7 +56,7 @@
            {{ registration_form|crispy }}
            <div class="control-group">
              <div class="controls">
-               <button type="submit" class="btn">注册</button>
+               <button type="submit" class="btn btn-default">注册</button>
              </div>
            </div>
          </form>
