shit, timezone is now correct now. notice we SHOULD NOT set TIME_ZONE in the settings.py

--- a/server/d1/vine_comment/templates/comments/comment_view_raw.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_raw.html
@@ -1,5 +1,6 @@
 {% load humanize %}
 {% load staticfiles %}
+{% load tz %}
 
 <script src="{% static 'js/comment_updown.js' %}"></script>
 
@@ -25,7 +26,13 @@
       </a>
      </span>
      <strong>{% if message.author %}{{ message.author.user }}{% else %}{{ message.author_ip }}{% endif %}</strong>
+     {% localtime on %}
      <span class='comment-time'> {{ message.time_added|naturaltime }}</span> {{message.comment_str}} <br>
+     {% endlocaltime %}
+     {%comment%}
+     这种timezone用法是正常的。
+     {{message.time_added|timezone:"Asia/Shanghai"}}
+     {%endcomment%}
   </li>
 {% endfor %}
 </ul>
