--- a/server/d1/vine_comment/templates/comments_list.html
+++ b/server/d1/vine_comment/templates/comments_list.html
@@ -64,9 +64,12 @@
             <span>{{ message.replies|length }}</span>
           </a>
          </span>
-         <span class="comment-text" id="comment_str_{{message.id}}">{{message.comment_str}}</span>
+         <a href="{{message.comment_board.url}}" target="_blank">
+           <span class="comment-text" id="comment_str_{{message.id}}">{{message.comment_str}}</span>
+         </a>
          <span>
-           (<a href="{{message.comment_board.url}}">{{message.comment_board.url}}</a>)
+             <!-- TODO: 跳转到某个站点子类/首页 -->
+           (<a href="{{message.comment_board.url}}" target="_blank">{{message.comment_board.title}}</a>)
            <a href="javascript:void(0);" onclick="expandDetail('{{message.id}}');return false;"><i class="fa fa-info-circle"></i></a>
          </span>
          <br>
