Set resize to none for comment textarea

--- a/server/d1/vine_comment/templates/comments/comment_view_meta.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_meta.html
@@ -11,7 +11,7 @@
 		<div class="row">
 		  <div class="col-lg-6">
 			<div class="input-group">
-			  <textarea rows="1" class="form-control" id="commentTop" name="commentTop" placeholder="可输入5-140个字"></textarea>
+			  <textarea rows="1" class="form-control" style="resize:none" id="commentTop" name="commentTop" placeholder="可输入5-140个字"></textarea>
 			  <span class="input-group-btn">
 			   {% if is_not_human %}
 			  {% csrf_token %}
@@ -31,7 +31,7 @@
 		<div class="row">
 		  <div class="col-lg-6">
 			<div class="input-group">
-			  <textarea rows="1" class="form-control" id="commentBottom" name="commentBottom" placeholder="可输入5-140个字"></textarea>
+			  <textarea rows="1" class="form-control" style="resize:none" id="commentBottom" name="commentBottom" placeholder="可输入5-140个字"></textarea>
 			  <span class="input-group-btn">
           <button class="btn btn-default submitComment" data-loading-text="评论中" id="submitCommentBottom" type="button">
             评论
