template: fix nested show bug while changing page.

--- a/server/d1/vine_comment/templates/comments_best.html
+++ b/server/d1/vine_comment/templates/comments_best.html
@@ -28,22 +28,26 @@
 			{% ifequal num p_comment.number %}
 				<li><span class="current"><b>{{ num }}</b></span></li>
 			{% else %}
-				<li id='pagination_{{num}}'><a href="#">{{ num }}</a></li>
+                <li id='pagination_{{num}}'><a href="/comments/best?page={{ num }}">{{ num }}</a></li>
+                {% comment %}
 				<script type="text/javascript">
 					$('#pagination_{{num}}').on('click', function() {
 						$('#showMsg').load('/comments/best?page={{ num }}');
 					});
 				</script>
+                {% endcomment %}
 
 			{% endifequal %}
 		{% endfor %}
 		{% if p_comment.has_next %}
-		<li id='pagination_arrow_{{ p_comment.next_page_number }}'><a href="#">»</a></li>
+        <li id='pagination_arrow_{{ p_comment.next_page_number }}'><a href="/comments/best?page={{ p_comment.next_page_number }}">»</a></li>
+        {% comment %}
 		<script type="text/javascript">
 			$('#pagination_arrow_{{ p_comment.next_page_number }}').on('click', function() {
 				$('#showMsg').load('/comments/best?page={{ p_comment.next_page_number }}');
 			});
 		</script>
+        {% endcomment %}
 		{% endif %}
 
 		</ul>
