--- a/server/d1/vine_comment/templates/comments/base.html
+++ b/server/d1/vine_comment/templates/comments/base.html
@@ -28,7 +28,7 @@
 <div id="commentBoard">
   <div id="boardRight" >
     <ul class="nav nav-pills" class="panel panel-default">
-      <li id="nav_comment" class="{% active request "comment" %}" title="{{ index_url }}"><a href="#">
+      <li id="nav_comment" class="{% active request "comment" %}" title="{{ index_url }}"><a href="javascript:void(0);">
       <span class="badge pull-right" id="comments_count">{{ p_comment.paginator.count }}</span> 口水</a> </li>
       <!-- <li id="nav_account" class="{% active request "account" %}"><a href="#"><span class="badge pull-right">2</span> 账户</a></li>
       <li id="nav_letter" class="{% active request "letter" %}"><a href="#"><span class="badge pull-right">33</span> 信封</a></li>
