template: fix words showing on breadcrumb

--- a/server/d1/vine_comment/templates/comments_up.html
+++ b/server/d1/vine_comment/templates/comments_up.html
@@ -9,7 +9,7 @@
 {% block content %}
 <ol class="breadcrumb">
   <li><a href="/">藤蔓评论</a></li>
-  <li class="active">最多up</li>
+  <li class="active">精华</li>
   {% if days == '1' %}
   <li class="active">
     <a href="/comments/up/1" id="comments_up_1"><b>今日</b></a> | 
