--- a/server/d1/vine_comment/templates/comments_best.html
+++ b/server/d1/vine_comment/templates/comments_best.html
@@ -16,13 +16,15 @@
 
 		<ul class='pagination'>
 		{% if p_comment.has_previous %}
-		<li id='pagination_arrow_{{ p_comment.previous_page_number }}'><a href='#'>«</a></li>
+		<li id='pagination_arrow_{{ p_comment.previous_page_number }}'><a href='/comments/best?page={{ p_comment.previous_page_number }}'>«</a></li>
+                {% comment %}
 		<script type="text/javascript">
 			var l = document.location;
 			$('#pagination_arrow_{{ p_comment.previous_page_number }}').on('click', function() {
 				$('#showMsg').load('/comments/best?page={{ p_comment.previous_page_number }}');
 			});
 		</script>
+                {% endcomment %}
 		{% endif %}
 		{% for num in p_comment.paginator.page_range %}
 			{% ifequal num p_comment.number %}
