--- a/server/d1/vine_comment/templates/comments_hot.html
+++ b/server/d1/vine_comment/templates/comments_hot.html
@@ -36,33 +36,39 @@
 {% include 'comments_list.html' %}
 		<ul class='pagination'>
 		{% if p_comment.has_previous %}
-		<li id='pagination_arrow_{{ p_comment.previous_page_number }}'><a href='#'>«</a></li>
+		<li id='pagination_arrow_{{ p_comment.previous_page_number }}'><a href='/comments/hot/{{days}}?page={{ p_comment.previous_page_number }}'>«</a></li>
+    {% comment %}
 		<script type="text/javascript">
 			$('#pagination_arrow_{{ p_comment.previous_page_number }}').on('click', function() {
 				$('#showMsg').load('/comments/hot/{{days}}?page={{ p_comment.previous_page_number }}');
 			});
 		</script>
+    {% endcomment %}
 		{% endif %}
 		{% for num in p_comment.paginator.page_range %}
 			{% ifequal num p_comment.number %}
 				<li><span class="current"><b>{{ num }}</b></span></li>
 			{% else %}
-				<li id='pagination_{{num}}'><a href="#">{{ num }}</a></li>
+				<li id='pagination_{{num}}'><a href="/comments/hot/{{days}}?page={{ num }}">{{ num }}</a></li>
+    {% comment %}
 				<script type="text/javascript">
 					$('#pagination_{{num}}').on('click', function() {
 						$('#showMsg').load('/comments/hot/{{days}}?page={{ num }}');
 					});
 				</script>
+    {% endcomment %}
 
 			{% endifequal %}
 		{% endfor %}
 		{% if p_comment.has_next %}
-		<li id='pagination_arrow_{{ p_comment.next_page_number }}'><a href="#">»</a></li>
+		<li id='pagination_arrow_{{ p_comment.next_page_number }}'><a href="/comments/hot/{{days}}?page={{ p_comment.next_page_number }}">»</a></li>
+    {% comment %}
 		<script type="text/javascript">
 			$('#pagination_arrow_{{ p_comment.next_page_number }}').on('click', function() {
           $('#showMsg').load('/comments/hot/{{days}}?page={{ p_comment.next_page_number }}');
 			});
 		</script>
+    {% endcomment %}
 		{% endif %}
 
 		</ul>
