--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -43,6 +43,7 @@
         <li><a href="/comments/up/7" id="comments_up_default">精华</a></li>
         <li><a href="/comments/hot/7" id="comments_hot_default">热议</a></li>
         <li><a href="/comments/newest" id="comments_newest">最新</a></li>
+        <li><a href="/comments/tag" id="comments_tag">TAG</a></li>
         {% comment %} <li><a href="/comments/debate/7" id="comments_debate_default">热议</a></li> {% endcomment %}
       </ul>
       <div class="col-sm-3 col-md-3">
