--- a/server/d1/vine_comment/templates/auth/auth_all__li.html
+++ b/server/d1/vine_comment/templates/auth/auth_all__li.html
@@ -16,6 +16,7 @@
 		 </li>
 	 {% endfor %}
 		 <li><a href="/logout/">登出</a></li>
+		 <li><a href="/home/">主页</a></li>
 		 </ul>
 	 </li>
 	 <li><a class="btn btn-inverse" href='/logout/' data-toggle="tooltip" data-placement="bottom" title="登出">
