--- a/server/d1/vine_comment/templates/comments/base.html
+++ b/server/d1/vine_comment/templates/comments/base.html
@@ -45,7 +45,7 @@
             </li>
           {% endfor %}
             <li><a href="/logout/">normal logout</a></li>
-            <li><a href="/home/raw">Home page</a></li>
+            <li><a href="/home/simple">Home page</a></li>
             </ul>
           </li>
         {% else %}
