--- a/server/d1/vine_comment/templates/home.html
+++ b/server/d1/vine_comment/templates/home.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
-{% load avatar_tags %}
 
 {% block head %}
 <style>
@@ -28,131 +27,7 @@ background-color: #F3F3F3;
 
 {% block content %}
 
-<header class="user-author-header header-gray">
-<div class="container">
-
-  <div class="row">
-
-    <div id="user-info-view" class="col-md-2 pull-left">
-      <div class="avatar-wrapper">
-        <!--a onclick="showForm(this, 'picForm')" title="更换头像" href='#'-->
-        <a href="{% url 'avatar_change' %}" title="更换头像">
-          <div class="avatar-image-container">
-            {% avatar user %}
-          </div>
-        </a>
-        {% comment %}
-        <form method="post" action="{% url 'user_head_sculpture' %}" enctype="multipart/form-data" style='display:none' id='picForm'>
-          {% csrf_token %}
-          {{ header_form|crispy }}
-          <div class="control-group">
-            <div class="controls">
-              <button type="submit" class="btn btn-primary">上传</button>
-            </div>
-          </div>
-        </form>
-        {% endcomment %}
-      </div>
-    </div>
-
-    <div id="user-info-view" class="col-md-2 pull-left">
-      <div class="user-details">
-        <div class="user-details-show">
-          <div class="user-identifier user-details-editable">
-            <span class="username">用户名：{{ user }}</span>
-          </div>
-        </div>
-        <div>详细信息</div>
-      </div>
-    </div>
-
-    <div class="user-stats col-md-2">
-      <div class="user-points-bar-container">
-        <div class="points-labels">
-          <span class="best">最高得分 <strong class="best-count"> {{ author.biggest_points }} </strong></span>
-        </div>
-        <div class="points-labels">
-          <span class="best">历史积分 <strong class="best-count"> {{ author.total_points }} </strong></span>
-        </div>
-        <div class="points-labels">
-          <span class="best">当前积分 <strong class="best-count"> {{ author.usable_points }} </strong></span>
-        </div>
-        <!-- 今天的分数
-        <div class="points-bar">
-          <span class="points-bar-fill" style="width: 0.0%">今天的分数
-            <span class="count-container count-right">
-              <span class="points-today-count"> XXX </span>
-            </span>
-          </span>
-        </div> -->
-      </div>
-    </div>
-
-<!--
-持续时间    <span class="stat-count"> XXX </span> 天
-<div class="last-coded">上次编码<span class="last-coded-time"> XXX 天前</span></div>
--->
-    <div class="user-stats col-md-2">
-      <div class="user-points-bar-container">
-        <div class="points-labels">
-          <span class="cright">连续登录<strong class="study-cright">{{ author.study_cright }}天</strong></span>
-        </div>
-        <div class="points-labels">
-          <span class="cright">最长连续登录<strong class="exam-cright">{{ author.exam_cright }}天</strong></span>
-        </div>
-      </div>
-    </div>
-
-  </div>
-
-</div>
-</header>
-
-{% include 'comments_list.html' %}
-
-<ul class='pagination'>
-  {% if p_comment.has_previous %}
-    <li id='pagination_arrow_{{ p_comment.previous_page_number }}'><a href='/home/?page={{ p_comment.previous_page_number }}'>«</a></li>
-  {% endif %}
-  {% for num in p_comment.paginator.page_range %}
-    {% ifequal num p_comment.number %}
-      <li><span class="current"><b>{{ num }}</b></span></li>
-    {% else %}
-      <li id='pagination_{{num}}'><a href="/home/?page={{ num }}">{{ num }}</a></li>
-    {% endifequal %}
-  {% endfor %}
-  {% if p_comment.has_next %}
-    <li id='pagination_arrow_{{ p_comment.next_page_number }}'><a href="/home/?page={{ p_comment.next_page_number }}">»</a></li>
-  {% endif %}
-</ul>
-
-{% endblock %}
-
-{% block footer %}
-<script src="http://cdn.jsdelivr.net/jquery.knob/1.2.2/jquery.knob.min.js"></script>
-
-<script>
-$(function() {
-    $(".dial").knob({
-    	readOnly:true,
-        'draw': function () {
-          if (this.cv.indexOf('%') == -1)
-            $(this.i).val(this.cv + '%');
-        }
-    });
-    $(".knob").knob();
-});
-
-function showForm(me, id) {
-  if ($('#'+id).is(":visible")) {
-    $(me).attr('title', "更换头像");
-    $('#'+id).hide();
-  } else {
-    $(me).attr('title', "收起表单");
-    $('#'+id).show();
-  }
-};
-</script>
+{% include 'home_raw.html' %}
 
 {% endblock %}
 
