--- a/server/d1/vine_comment/templates/home_raw.html
+++ b/server/d1/vine_comment/templates/home_raw.html
@@ -1,9 +1,5 @@
 
-{% extends 'comments/base.html' %}
-{% load crispy_forms_tags %}
 {% load avatar_tags %}
-
-{% block content %}
 
 <header class="user-author-header header-gray">
 <div class="container">
@@ -89,17 +85,17 @@
 
 <ul class='pagination'>
   {% if p_comment.has_previous %}
-    <li id='pagination_arrow_{{ p_comment.previous_page_number }}'><a href='/home/raw?page={{ p_comment.previous_page_number }}'>«</a></li>
+  <li id='pagination_arrow_{{ p_comment.previous_page_number }}'><a href='/home/{{flag}}?page={{ p_comment.previous_page_number }}'>«</a></li>
   {% endif %}
   {% for num in p_comment.paginator.page_range %}
     {% ifequal num p_comment.number %}
       <li><span class="current"><b>{{ num }}</b></span></li>
     {% else %}
-      <li id='pagination_{{num}}'><a href="/home/raw?page={{ num }}">{{ num }}</a></li>
+    <li id='pagination_{{num}}'><a href="/home/{{flag}}?page={{ num }}">{{ num }}</a></li>
     {% endifequal %}
   {% endfor %}
   {% if p_comment.has_next %}
-    <li id='pagination_arrow_{{ p_comment.next_page_number }}'><a href="/home/raw?page={{ p_comment.next_page_number }}">»</a></li>
+  <li id='pagination_arrow_{{ p_comment.next_page_number }}'><a href="/home/{{flag}}?page={{ p_comment.next_page_number }}">»</a></li>
   {% endif %}
 </ul>
 
@@ -127,5 +123,3 @@ function showForm(me, id) {
   }
 };
 </script>
-
-{% endblock %}
