Refined comments tag htmls

--- a/server/d1/vine_comment/templates/comments/comment_view_meta.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_meta.html
@@ -9,7 +9,7 @@
 		  </div>
 		</div>
     <li><a href="/comments/related/{{ url_b64 }}" id="comments_related">相关</a></li>
-    <li><a href="/comments/tag/raw" id="comments_related">推荐</a></li>
+    <li><a href="/comments/tag/simple" id="comments_related">推荐</a></li>
 		<div class="row">
 		  <div class="col-lg-6">
 			<div class="input-group">
