--- a/server/d1/vine_comment/templates/comments_tag_raw.html
+++ b/server/d1/vine_comment/templates/comments_tag_raw.html
@@ -110,3 +110,21 @@
       {% endfor %}
     {% endfor %}
     </ul>
+
+		<ul class='pagination'>
+
+		{% if p_comment.has_previous %}
+    <li id='pagination_arrow_{{ p_comment.previous_page_number }}'><a href='/comments/tag/{{flag}}?page={{ p_comment.previous_page_number }}'>«</a></li>
+		{% endif %}
+		{% for num in p_comment.paginator.page_range %}
+			{% ifequal num p_comment.number %}
+				<li><span class="current"><b>{{ num }}</b></span></li>
+			{% else %}
+      <li id='pagination_{{num}}'><a href="/comments/tag/{{flag}}?page={{ num }}">{{ num }}</a></li>
+			{% endifequal %}
+		{% endfor %}
+		{% if p_comment.has_next %}
+    <li id='pagination_arrow_{{ p_comment.next_page_number }}'><a href="/comments/tag/{{flag}}?page={{ p_comment.next_page_number }}">»</a></li>
+		{% endif %}
+
+		</ul>
