Keep things simple in extension

--- a/server/d1/vine_comment/templates/comments_list.html
+++ b/server/d1/vine_comment/templates/comments_list.html
@@ -74,7 +74,7 @@
          </span>
          <br>
          <span>
-           <a href="/home/">
+           <a href="/home/{{flag}}">
              {% if message.author.user|has_avatar %}
                {% avatar message.author.user 30 %}
              {% else %} <!-- no head sculpture -->
